Fixed missing "view our work" on mobile and other services fixes

--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -43,6 +43,36 @@
   }
 }
 
+.view-our-work-mobile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 1.625rem;
+  color: $primary-dark;
+  text-decoration: none;
+  font-weight: 600;
+  border-bottom: 3px solid transparent;
+  margin-top: 32px;
+  padding-bottom: 5px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  
+  @media (min-width: $brk-point-s) {
+    display: none; // Hide at 768px and above
+  }
+  
+  .fa-arrow-right {
+    font-size: 1.8rem;
+    transition: transform 0.3s ease;
+  }
+  
+  &:hover {
+    border-bottom-color: $primary-dark;
+  }
+}
+
 .viewourwork {
   display: none;
 
